Updates Application Template (AngularJS)

--- a/templates/template-application-angular/src/main/resources/template-application-angular/extensions/views/entity.extension.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/extensions/views/entity.extension.template
@@ -1,5 +1,5 @@
 {
 	'description': '{{name}} view',
 	'extensionPoint': 'shell-{{projectName}}-view',
-	'module': '{{projectName}}/extensions/view/{{name}}.js'
+	'module': '{{projectName}}/views/{{name}}/view.js'
 }
