--- a/templates/template-application-angular/src/main/resources/template-application-angular/views/manage/menu/item.extension.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/views/manage/menu/item.extension.template
@@ -1,5 +1,5 @@
 {
 	'description': '{{name}} menu',
 	'extensionPoint': 'shell-{{projectName}}-menu',
-	'module': '{{projectName}}/extensions/menu/{{name}}.js'
+	'module': '{{projectName}}/views/{{name}}/menu/item.js'
 }
