--- a/templates/template-application-angular/src/main/resources/template-application-angular/data/dao/entity.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/data/dao/entity.js.template
@@ -1,17 +1,17 @@
 var daoApi = require('db/v3/dao');
 var dao = daoApi.create({
-	"table": "${dataName}",
-	"properties": [
+	'table': '${dataName}',
+	'properties': [
 #foreach ($property in $properties) 
 		{
-			"name": #if($property.dataPrimaryKey)"id"#else"${property.name}"#end,
-			"column": "${property.dataName}",
-			"type":"${property.dataType}",
-			"id": ${property.dataPrimaryKey},
-			"required": ${property.dataNullable}
-	}#if($foreach.hasNext),#end
+			'name':  '${property.name}',
+			'column': '${property.dataName}',
+			'type':'${property.dataType}',
+			'id': ${property.dataPrimaryKey},
+			'required': ${property.dataNullable}
+		}#if($foreach.hasNext),#end
 #end
-	]
+]
 });
 
 exports.list = function(settings) {
