--- a/templates/template-application-angular/src/main/resources/template-application-angular/resources/templates/menu.html.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/resources/templates/menu.html.template
@@ -42,6 +42,7 @@
 					<li><a href="#" data-theme="wendy" class="theme-link" ng-click="selectTheme('wendy')">Wendy</a></li>
 					<li><a href="#" data-theme="baroness" class="theme-link" ng-click="selectTheme('baroness')">Baroness</a></li>
 					<li><a href="#" data-theme="simone" class="theme-link" ng-click="selectTheme('simone')">Simone</a></li>
+					<li><a href="#" data-theme="simone" class="theme-link" ng-click="selectTheme('alice')">Alice</a></li>
 				</ul>
 			  </li>				  
 			  <li class="hidden-xs">
