--- a/templates/template-application-angular/src/main/resources/template-application-angular/resources/templates/menu.html.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/resources/templates/menu.html.template
@@ -38,11 +38,8 @@
 			  <li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown">Themes <b class="caret"></b></a>
 				<ul class="dropdown-menu">
-					<li><a href="#" data-theme="default" class="theme-link" ng-click="selectTheme('default')">Default</a></li>
-					<li><a href="#" data-theme="wendy" class="theme-link" ng-click="selectTheme('wendy')">Wendy</a></li>
-					<li><a href="#" data-theme="baroness" class="theme-link" ng-click="selectTheme('baroness')">Baroness</a></li>
-					<li><a href="#" data-theme="simone" class="theme-link" ng-click="selectTheme('simone')">Simone</a></li>
-					<li><a href="#" data-theme="simone" class="theme-link" ng-click="selectTheme('alice')">Alice</a></li>
+					<li><a href="#" data-theme="florence" class="theme-link" ng-click="selectTheme('florence')">Florence</a></li>
+					<li><a href="#" data-theme="alice" class="theme-link" ng-click="selectTheme('alice')">Alice</a></li>
 				</ul>
 			  </li>				  
 			  <li class="hidden-xs">
