--- a/groups/runtime-javascript/pom.xml
+++ b/groups/runtime-javascript/pom.xml
@@ -4,9 +4,9 @@
 	
 	<parent>
 		<groupId>org.eclipse.dirigible</groupId>
-		<artifactId>dirigible-ide-parent</artifactId>
+		<artifactId>dirigible-parent</artifactId>
 		<version>3.2.0-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
 	<name>Group - Runtime - JavaScript</name>
