--- a/templates/template-application-angular/src/main/resources/template-application-angular/extensions/point/menu.extensionpoint.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/extensions/point/menu.extensionpoint.template
@@ -1,4 +1,4 @@
 {
 	'description': 'Extension Point for the {{projectName}} Menu Providers',
-	'name': 'shell-{{projectName}}-menu'
+	'name': 'launchpad-{{projectName}}-menu'
 }
