--- a/templates/template-application-angular/src/main/resources/template-application-angular/extensions/point/view.extensionpoint.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/extensions/point/view.extensionpoint.template
@@ -1,4 +1,4 @@
 {
 	'description': 'Extension Point for the {{projectName}} View Providers',
-	'name': 'shell-{{projectName}}-view'
+	'name': 'launchpad-{{projectName}}-view'
 }
