--- a/templates/template-application-angular/src/main/resources/template-application-angular/extensions/views/entity.extension.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/extensions/views/entity.extension.template
@@ -1,5 +1,5 @@
 {
 	'description': '{{name}} view',
-	'extensionPoint': 'shell-{{projectName}}-view',
+	'extensionPoint': 'launchpad-{{projectName}}-view',
 	'module': '{{projectName}}/views/{{name}}/view.js'
 }
