--- a/templates/template-application-angular/src/main/resources/template-application-angular/index.html.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/index.html.template
@@ -36,11 +36,11 @@
 
 <body ng-app="workbench" ng-controller="WorkbenchController">
 
-	<div menu menu-data-url="/services/v3/js/{{projectName}}/api/shell/menu.js"></div>
+	<div menu menu-extension-point="launchpad-{{projectName}}-menu"></div>
 
 	<div class="shell">
 		<div class="sidebar list-group" sidebar active="Workbench"></div>
-		<div id="workbench" class="plane" views-layout views-layout-model="layoutModel"></div>
+		<div id="workbench" class="plane" view-extension-point="launchpad-{{projectName}}-view" views-layout views-layout-model="layoutModel"></div>
 	</div>
 	<div class="statusbar" status-bar>{{message}}</div>
 	
