--- a/templates/template-all/pom.xml
+++ b/templates/template-all/pom.xml
@@ -87,6 +87,11 @@
 		</dependency>
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-template-application-launchpad</artifactId>
+		 	<version>3.2.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-template-application-angular</artifactId>
 		 	<version>3.2.0-SNAPSHOT</version>
 		</dependency>
