configuration property for the default theme

--- a/modules/services/service-theme/src/main/resources/dirigible-theme.properties
+++ b/modules/services/service-theme/src/main/resources/dirigible-theme.properties
@@ -8,5 +8,6 @@
 # SAP - initial API and implementation
 #
 
-# Registry Service Parameters
+# Theme Service Parameters
 
+DIRIGIBLE_THEME_DEFAULT=Default
