--- a/templates/template-application-angular/src/main/resources/template-application-angular/views/manage/view.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/views/manage/view.js.template
@@ -11,8 +11,8 @@
 exports.getView = function() {
 	return {
 		'id': '{{name}}',
-		'name': '{{name}}',
-		'label': '{{name}}',
+		'name': '{{menuLabel}}',
+		'label': '{{menuLabel}}',
 		'factory': 'frame',
 		// 'region': 'center-bottom',
 		'link': '/services/v3/web/{{projectName}}/views/{{name}}/index.html'
