--- a/templates/template-application-angular/src/main/resources/template-application-angular/views/master/details/controller.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/views/master/details/controller.js.template
@@ -22,6 +22,13 @@ angular.module('page')
 		},
 #end
 #end
+#foreach ($property in $properties)
+#if($property.relationshipType == "COMPOSITION" && $property.relationshipCardinality == "1_n")
+		on${property.relationshipEntityName}Selected: function(callback) {
+			on('${launchpadName}.${projectName}.${property.relationshipEntityName}.selected', callback);
+		},
+#end
+#end
 		messageEntityModified: function() {
 			message('modified');
 		}
@@ -59,12 +66,11 @@ angular.module('page')
 #end
 
 	function load() {
-		$http.get(api)
+		${dollar}http.get(api + '?#foreach ($property in $properties)#if($property.relationshipType == "COMPOSITION" && $property.relationshipCardinality == "1_n")${property.name}#end#end=' + $scope.masterEntityId)
 		.success(function(data) {
 			$scope.data = data;
 		});
 	}
-	load();
 
 	$scope.openNewDialog = function() {
 		$scope.actionType = 'new';
@@ -90,6 +96,11 @@ angular.module('page')
 	};
 
 	$scope.create = function() {
+#foreach ($property in $properties)
+#if($property.relationshipType == "COMPOSITION" && $property.relationshipCardinality == "1_n")
+		${dollar}scope.entity.$property.name = $scope.masterEntityId;
+#end
+#end
 		${dollar}http.post(api, JSON.stringify(${dollar}scope.entity))
 		.success(function(data) {
 			load();
@@ -102,6 +113,12 @@ angular.module('page')
 	};
 
 	$scope.update = function() {
+#foreach ($property in $properties)
+#if($property.relationshipType == "COMPOSITION" && $property.relationshipCardinality == "1_n")
+		${dollar}scope.entity.$property.name = $scope.masterEntityId;
+#end
+#end
+
 #foreach ($property in $properties)
 #if($property.dataPrimaryKey)
 		${dollar}http.put(api + '/' + ${dollar}scope.entity.${property.name}, JSON.stringify(${dollar}scope.entity))
@@ -148,6 +165,15 @@ angular.module('page')
 #foreach ($property in $properties)
 #if($property.widgetType == "DROPDOWN" && $property.relationshipEntityName)
 	${dollar}messageHub.on${property.relationshipEntityName}Modified(${property.name.toLowerCase()}OptionsLoad);
+#end
+#end
+
+#foreach ($property in $properties)
+#if($property.relationshipType == "COMPOSITION" && $property.relationshipCardinality == "1_n")
+	${dollar}messageHub.on${property.relationshipEntityName}Selected(function(event) {
+		$scope.masterEntityId = event.data.id
+		load();
+	});
 #end
 #end
 
