--- a/templates/template-application-launchpad/src/main/resources/template-application-launchpad/api/launchpad/views.js.template
+++ b/templates/template-application-launchpad/src/main/resources/template-application-launchpad/api/launchpad/views.js.template
@@ -14,12 +14,16 @@ var response = require('http/v3/response');
 
 var extensionPoint = request.getParameter('extensionPoint');
 
+var extensionPoints = extensionPoint.split(',');
 var views = [];
-var viewExtensions = extensions.getExtensions(extensionPoint);
-for (var i = 0; viewExtensions !== null && i < viewExtensions.length; i++) {
-    var viewExtension = require(viewExtensions[i]);
-    var view = viewExtension.getView();
-    views.push(view);
+
+for (var i = 0; i < extensionPoints.length; i ++) {
+	var viewExtensions = extensions.getExtensions(extensionPoints[i]);
+	for (var j = 0; viewExtensions !== null && j < viewExtensions.length; j++) {
+	    var viewExtension = require(viewExtensions[j]);
+	    var view = viewExtension.getView();
+	    views.push(view);
+	}
 }
 
 response.println(JSON.stringify(views));
