--- a/templates/template-application-angular/src/main/resources/template-application-angular/api/entity.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/api/entity.js.template
@@ -4,8 +4,13 @@ var http = require('${projectName}/api/http');
 
 rs.service()
 	.resource('')
-		.get(function() {
-			var entities = dao.list();
+		.get(function(ctx, request) {
+			var queryOptions = {};
+			var parameters = request.getParameterNames();
+			for (var i = 0; i < parameters.length; i ++) {
+				queryOptions[parameters[i]] = request.getParameter(parameters[i]);
+			}
+			var entities = dao.list(queryOptions);
 			http.sendResponseOk(entities);
 		})
 	.resource('{id}')
@@ -21,14 +26,14 @@ rs.service()
 	.resource('')
 		.post(function(ctx, request, response) {
 			var entity = request.getJSON();
-			entity.id = dao.create(entity);
-			response.setHeader('Content-Location', '/services/v3/js/${projectName}/api/${name}.js/' + entity.id);
+			entity.#foreach($property in $properties)#if($property.dataPrimaryKey)${property.name}#end#end = dao.create(entity);
+			response.setHeader('Content-Location', '/services/v3/js/${projectName}/api/${name}.js/' + entity.#foreach($property in $properties)#if($property.dataPrimaryKey)${property.name}#end#end);
 			http.sendResponseCreated(entity);
 		})
 	.resource('{id}')
 		.put(function(ctx, request) {
 			var entity = request.getJSON();
-			entity.id = ctx.pathParameters.id;
+			entity.#foreach($property in $properties)#if($property.dataPrimaryKey)${property.name}#end#end = ctx.pathParameters.id;
 			dao.update(entity);
 			http.sendResponseOk(entity);
 		})
