--- a/templates/template-application-angular/src/main/resources/template-application-angular/views/master/master/view.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/views/master/master/view.js.template
@@ -8,23 +8,14 @@
  * SAP - initial API and implementation
  */
 
-exports.getTile = function() {
+exports.getView = function() {
 	return {
-#if($moduleName)
-		'name': '${moduleName}',
-#else
-		'name': '${projectName}',
-#end
-#if($moduleIcon)
-		'icon': '${moduleIcon}',
-#else
-		'icon': 'life-ring',
- #end
-		'location': '/services/v3/web/${projectName}/index.html',
-#if($moduleOrder)
-		'order': '${moduleOrder}'
-#else
-		'order': 999
-#end
+		'id': '{{name}}',
+		'name': '{{menuLabel}}',
+		'label': '{{menuLabel}}',
+		'factory': 'frame',
+		'region': 'center-top',
+		'type': 'master',
+		'link': '/services/v3/web/{{projectName}}/views/master/{{name}}/master/index.html'
 	};
 };
