--- a/templates/template-application-angular/src/main/resources/template-application-angular/views/manage/index.html.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/views/manage/index.html.template
@@ -13,7 +13,7 @@
 </head>
 
 <body ng-controller="PageController">
-	<div class="page-header">
+	<div class="page-header container">
 		<h1>Manage ${name}</h1>
 	</div>
 	<div class="container">
