--- a/templates/template-all/pom.xml
+++ b/templates/template-all/pom.xml
@@ -100,5 +100,10 @@
 		 	<artifactId>dirigible-template-application-openui5</artifactId>
 		 	<version>3.2.0-SNAPSHOT</version>
 		</dependency> -->
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-template-mobile-hello-world</artifactId>
+		 	<version>3.2.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
