--- a/templates/template-application-angular/src/main/resources/template-application-angular/views/list.html.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/views/list.html.template
@@ -17,7 +17,7 @@
   <body ng-controller="PageController">
 
     <div>
-      <div class="page-header">
+      <div class="page-header container">
         <h1>[[name]] List</h1>
       </div>
       
