--- a/templates/template-application-angular/src/main/resources/template-application-angular/views/master/index.html.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/views/master/index.html.template
@@ -37,9 +37,9 @@
 <body ng-app="workbench" ng-controller="WorkbenchController">
 
 	<div class="shell">
-		<div id="{{projectName}}-{{name}}" class="plane" views-layout views-layout-model="layoutModel" views-extension-point="launchpad-{{projectName}}-{{name}}-view"></div>
+		<div id="{{projectName}}-{{name}}" class="plane plane-inner" views-layout views-layout-model="layoutModel" views-extension-point="launchpad-{{projectName}}-{{name}}-view"></div>
 	</div>
-	<div class="statusbar" status-bar>{{message}}</div>
+	<!-- div class="statusbar" status-bar>{{message}}</div -->
 	
 	<!-- jQuery -->
 	<script type="text/javascript" src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
