--- a/pom.xml
+++ b/pom.xml
@@ -407,6 +407,7 @@
 		<module>releng/desktop-all</module>
 		<module>releng/sap-all</module>
 		<module>releng/server-all</module>
+		<module>releng/server-keycloak-all</module>
 		<module>releng/server-runtime</module>
 		<module>releng/trial-all</module>
 		<module>releng/server-javascript</module>
